2003-08-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* python/lilylib.py (read_pipe): only store and display error log
	if verbose not set.
	(read_pipe): only display log if it contains something.

2003-08-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/misc/GNUmakefile: Re-add.
	(TEXTS): Add CHANGES.

2003-08-27  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond.words: add \newcontext.

2003-08-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/tie-performer.cc (stop_translation_timestep): only flush
	tied_notes when we have actually made a tie. Fixes bugs with ties
	in polyphonic scores.

2003-08-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/autogen.sh: Bugfix: copy aclocal.m4, autogen.sh also if
	they do not exist.

2003-08-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION (PACKAGE_NAME): released 1.9.1 

	* ly/engraver-init.ly (RemoveEmptyStaffContext): don't add
	Instrument_name_engraver

	* lily/tie-performer.cc (create_audio_elements): bugfix

	* Documentation/user/music-glossary.tely (Top): comment out
	font-style statements.

	* input/test/force-hshift.ly: revise example.

	* Documentation/bibliography/engraving.bib (note): typos.

	* configure.in: bump GCC requirements to 3.x

	* lily/include/audio-item.hh (class Audio_tie): rename
	note_l_drul_ to note_drul_

	* lily/tie-performer.cc (class Tie_performer): patch for new ties.

	* lily/parser.yy (relative_music): whoops. All \relative were off
	by ...  a lot .... Ahem.

	* scm/define-music-types.scm (music-descriptions): idem.

	* lily/beam-engraver.cc: move new-beam-event to beam-event

	* lily/tie-engraver.cc (class Tie_engraver): move New_tie_engraver
	to Tie_engraver

	* input/regression/bar-number.ly: remove unnecessary old-relative
	options.
	
	* Documentation/user/internals.itely (Creating contexts): document
	\newcontext

	* lily/parser.yy (Composite_music): add \newcontext

	* Documentation/user/refman.itely (MIDI block): add note about
	dotted tempos.
