@@ -1,3 +1,13 @@
+2003-08-28  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* Documentation/topdocs/INSTALL.texi: Explain install-pfa-fonts.
+
+	* GNUmakefile.in (install-pfa-fonts):
+	(get-pfa-fonts): New target.
+
+	* stepmake/stepmake/toplevel-targets.make: Add pfa-fonts and
+	install-pfa-fonts help.
+
 2003-08-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* python/lilylib.py (read_pipe): only store and display error log
